--- a/views/index.html
+++ b/views/index.html
@@ -14,20 +14,39 @@
   <div class="header container">
     <div class="page-header">
       <h1>留言板</h1>
-      <a class="btn btn-success" href="/post">撰寫留言</a>
+      <a class="btn btn-success" href="/post">新增留言</a>
     </div>
   </div>
 
   <div class="comments container">
     <ul class="list-group">
         <!-- art-template -->
-      {{each comments}}
-      <li class="list-group-item">
-        <h2>{{ $value.name }}</h2>
-        <p>{{ $value.message }}</p> 
-        <span class="pull-right">{{ $value.post_time }}</span>
-      </li>
-      {{/each}}
+        <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">ID</th>
+              <th scope="col">姓名</th>
+              <th scope="col">留言</th>
+              <th scope="col">日期</th>
+              <th scope="col">修改 / 刪除</th>
+            </tr>
+          </thead>
+          <tbody>
+            {{each comments}}
+            <tr>
+              <th scope="row">{{$value.id}}</th>
+              <td>{{ $value.name }}</td>
+              <td>{{ $value.message }}</td>
+              <td>{{ $value.post_time }}</td>
+              <td>
+                <a href="/update?id={{ $value.id }}" class="btn btn-warning">修改</a>
+                <a href="/delete?id={{ $value.id }}" class="btn btn-danger">刪除</a>
+              </td>
+            </tr>
+            {{/each}}
+            
+          </tbody>
+        </table>
     </ul>
   </div>
 </body>
